--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>AI Photo Generator</title>
   </head>
   <body>
+    
     <main>
       <h1>AI Photo Generator</h1>
 
@@ -23,8 +24,6 @@
 
     </main>
 
-
-    
     <script type="module" src="/main.js"></script>
   </body>
 </html>
